--- a/topnav.css
+++ b/topnav.css
@@ -9,12 +9,12 @@ body{
 div{
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 h1{
   font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
   font-size: 50px;
-  margin: 10px;
   margin: 0;
   padding: 0;
 }
@@ -88,6 +88,38 @@ p{
     padding: 0; 
   }
 
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  
+  .container {
+    position: relative;
+    text-align: center;
+    background: transparent;
+
+  }
+
+  .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: transparent;
+    color: black    
+  }
+
+  .centered h1{
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-size: 50px;
+    margin: 0;
+    padding: 0;
+    color: white;
+    text-shadow: 4px 4px black;
+  }
+
   
   a{
     text-decoration: none;
@@ -97,25 +129,6 @@ p{
   img{
     max-width:100%;
     max-height:100%;
-  }
-
-  .professional{
-    background: white;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .professional div{
-    background: white;
-    padding: 0;
-    margin: 0px;
-  }
-
-  .professional img{
-    background: white;
-    padding: 0;
-    margin: 0;
-    
   }
 
   div{
@@ -140,39 +153,5 @@ p{
   margin: 0px;
 
 }
-
-  #frame{
-    height: 1000px;
-    width: 100%;
-    margin: 0;
-  padding: 0;
-  }
-
-  #frame_title{
-    width: 50%;
-    height: 100px;
-    background: yellow;
-    float: left;
-    margin: 0;
-  padding: 0;
-  }
-
-  #frame_picture{
-    width: 50%;
-    float: left;
-    background: blue;
-    margin: 0;
-  padding: 0;
-  }
-
-  #frame_text{
-    width: 50%;
-    height: 100%;
-    float: right;
-    background: red;
-    margin: 0;
-  padding: 0;
-  }
-
   
 
