--- a/topnav.css
+++ b/topnav.css
@@ -116,7 +116,7 @@ p{
     font-size: 50px;
     margin: 0;
     padding: 0;
-    color: white;
+    color: lightskyblue;
     text-shadow: 4px 4px black;
   }
 
