--- a/topnav.css
+++ b/topnav.css
@@ -3,7 +3,7 @@ body{
   background: dimgray;
   margin: 0;
   padding: 0;
-  
+
 }
 
 div{
@@ -17,13 +17,14 @@ h1{
   font-size: 50px;
   margin: 0;
   padding: 0;
+  color: rgb(22, 59, 89)
 }
 
 h2{
   font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
   font-size: 32px;
   padding-left: 20px;
-  
+
 }
 
 p{
@@ -33,59 +34,76 @@ p{
   margin: 0;
 
 }
+
+a{
+  text-decoration: none;
+  color: rgb(235, 297, 113);
+}
+
+img{
+  max-width:100%;
+  max-height:100%;
+}
+
+div{
+  padding: 0;
+  margin: 0;
+}
+
 .topnav {
-    background-color: dimgray;
+    background-color: rgb(22, 59, 89);
     overflow: hidden;
     box-shadow: 0px 0px;
     box-shadow: 0px -2px 2px inset white;
     }
-  
+
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: white;
     text-align: center;
     padding: 20px 16px;
     text-decoration: none;
     font-size: 17px;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
 
   }
-  
+
   /* Change the color of links on hover */
   .topnav a:hover {
     background-color: #ddd;
     color: black;
   }
-  
+
   /* Add a color to the active/current link */
   .topnav a.active {
-    background-color: steelblue;
+    background-color: rgb(231, 142, 108);
     color: white;
   }
 
   .body{
     background: white;
   }
-  
-  .footer {
-    background: dimgray;
-    color: #f2f2f2;
-    margin-top: 0px;
-    padding-top: 0px; 
-    float: none;
 
-  }
+.footer {
+  background: rgb(22, 59, 89);
+  color: #f2f2f2;
+  margin-top: 0px;
+  padding-top: 0px;
+  float: none;
+
+}
 
   .footer h2{
     text-align: center;
     margin: 0;
-      padding: 0; 
+      padding: 0;
   }
 
   .footer p{
     text-align: center;
     margin: 0;
-    padding: 0; 
+    padding: 0;
   }
 
   .center {
@@ -94,7 +112,7 @@ p{
     margin-right: auto;
     width: 100%;
   }
-  
+
   .container {
     position: relative;
     text-align: center;
@@ -108,7 +126,7 @@ p{
     left: 50%;
     transform: translate(-50%, -50%);
     background: transparent;
-    color: black    
+    color: black
   }
 
   .centered h1{
@@ -116,26 +134,20 @@ p{
     font-size: 50px;
     margin: 0;
     padding: 0;
-    color: lightskyblue;
+    color: white;
     text-shadow: 4px 4px black;
   }
 
-  
-  a{
-    text-decoration: none;
-    color: blue;
-  }
-
-  img{
-    max-width:100%;
-    max-height:100%;
-  }
-
-  div{
-    background: white;
-    padding: 0;
+  .centered h2{
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-size: 25px;
     margin: 0;
+    padding: 0;
+    color: white;
+    text-shadow: 2px 2px black;
+
   }
+
 
 
 #left{
@@ -148,10 +160,8 @@ p{
 
 #right{
   width: 50%;
-  height: 100%;  
+  height: 100%;
   float:left;
   margin: 0px;
 
 }
-  
-
