Fix background color

--- a/topnav.css
+++ b/topnav.css
@@ -1,6 +1,6 @@
 /* Add a black background color to the top navigation */
 body{
-  background: dimgray;
+  background: #5cdb95;
   margin: 0;
   padding: 0;
 
