--- a/topnav.css
+++ b/topnav.css
@@ -18,13 +18,13 @@ h1{
   margin: 0;
   padding: 0;
   color: rgb(22, 59, 89);
-  margin-left: 10px;
+  margin-left: 25px;
 }
 
 h2{
   font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
   font-size: 32px;
-  padding-left: 20px;
+  padding-left: 50px;
   color: rgb(231, 142, 108);
   background-color: rgb(22, 59, 89);
 
@@ -33,7 +33,8 @@ h2{
 p{
   font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
   font-size: 20px;
-  padding-left: 30px;
+  padding-left: 100px;
+  padding-right: 100px;  
   margin: 0;
   color: white;
 
@@ -83,9 +84,6 @@ div{
     color: white;
   }
 
-  .body{
-    background: white;
-  }
 
 .footer {
   background: rgb(22, 59, 89);
@@ -147,10 +145,18 @@ div{
     padding: 0;
     color: white;
     text-shadow: 2px 2px black;
+    background-color: transparent;
+
 
   }
-
-
+  /* h2{
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-size: 32px;
+    padding-left: 50px;
+    color: rgb(231, 142, 108);
+    background-color: rgb(22, 59, 89);
+  
+  } */
 
 #left{
   width: 50%;
