--- a/topnav.css
+++ b/topnav.css
@@ -145,7 +145,7 @@ div{
     padding: 0;
     color: white;
     text-shadow: 2px 2px black;
-    background-color: transparent;
+    background-color: transparent
 
 
   }
