beginning of the power lift page

--- a/public/style.css
+++ b/public/style.css
@@ -10,93 +10,19 @@ body{
     background-color: rgb(32,35,40) ;
 }
 
-.name{
-    /* position: absolute; */
-    /* top: 50%;
-    left: 50%; */
-    transform: translate(-50%, -50%);
-    stroke-linecap: square;
-    fill: white; 
-    /* animation: fill-anim 1s ease forwards 3s; */
-
+h1{
+    padding-top: 3%;
+    text-align: center;
+    color: white;
 }
 
-#name path{
-    stroke: white;
-    stroke-width: 5;
+h2{
+    padding-top: 2%;
+    text-align: center;
+    color: white;
 }
 
-#name path:nth-child(1){
-    stroke-dasharray: 363.0938415527344;
-    stroke-dashoffset: 363.0938415527344;
-    animation: line-anim 2s ease forwards;
-
-}
-#name path:nth-child(2){
-    stroke-dasharray: 232.69798278808594;
-    stroke-dashoffset: 232.69798278808594;
-    animation: line-anim 2s ease forwards .3s;
-}
-#name path:nth-child(3){
-    stroke-dasharray: 437.616943359375;
-    stroke-dashoffset: 437.616943359375;
-    animation: line-anim 2s ease forwards .6s;
-}
-#name path:nth-child(4){
-    stroke-dasharray: 321.1700439453125;
-    stroke-dashoffset: 321.1700439453125;
-    animation: line-anim 2s ease forwards .9s;
-}
-#name path:nth-child(5){
-    stroke-dasharray: 398.1834716796875;
-    stroke-dashoffset: 398.1834716796875;
-    animation: line-anim 2s ease forwards 1.2s;
-}
-#name path:nth-child(6){
-    stroke-dasharray: 232.69815063476562;
-    stroke-dashoffset: 232.69815063476562;
-    animation: line-anim 2s ease forwards 1.5s;
-}
-
-#name path:nth-child(7){ /* start of the mooore */
-    stroke-dasharray: 801.3138427734375;
-    stroke-dashoffset: 801.3138427734375;
-    animation: line-anim 2s ease forwards;
-}
-#name path:nth-child(8){
-    stroke-dasharray: 398.18408203125;
-    stroke-dashoffset: 398.18408203125;
-    animation: line-anim 2s ease forwards .3s;
-}
-#name path:nth-child(9){
-    stroke-dasharray: 398.18408203125;
-    stroke-dashoffset: 398.18408203125;
-    animation: line-anim 2s ease forwards .6s;
-}
-
-#name path:nth-child(10){
-    stroke-dasharray: 232.69790649414062;
-    stroke-dashoffset: 232.69790649414062;
-    animation: line-anim 2s ease forwards .9s;
-}
-#name path:nth-child(11){
-    stroke-dasharray: 437.61767578125;
-    stroke-dashoffset: 437.61767578125;
-    animation: line-anim 2s ease forwards 1.2s;
-}
-
-@keyframes line-anim{
-    to{
-        stroke-dashoffset: 0;
-        /* stroke-dasharray: 0; */
-    }
-}
-
-@keyframes fill-anim{
-    from{
-        fill: rgb(32,35,40); 
-   }
-    to{
-        fill: white;
-    }
-}
+a:hover {
+    background-color: #ddd;
+    color: black;
+  }
