--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 body{
@@ -22,7 +24,32 @@ h2{
     color: white;
 }
 
+.flexbox-container {
+    display: flex;
+
+    flex-direction: column;
+
+	align-items: center;
+}
+
+a {
+    position: relative;
+    vertical-align: middle;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 30px;
+  }
+  
+  /* Change the color of links on hover */
 a:hover {
     background-color: #ddd;
     color: black;
+  }
+  
+  /* Add a color to the active/current link */
+ a.active {
+    background-color: red;
+    color: white;
   }
