--- a/public/meet_result.css
+++ b/public/meet_result.css
@@ -1,8 +1,21 @@
 .flex-container {
     display: flex;
     /* background-color: DodgerBlue; */
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 
+  .card {
+    box-shadow: 0 6px 10px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background-color: rgb(22, 22, 24) ;
+    margin: 3%;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .card:hover {
+    box-shadow: 0 16px 32px 0 rgba(0,0,0,0.4);
   }
 
   .row {
@@ -10,11 +23,7 @@
     flex-direction: row;
     justify-content: center;
     align-content: space-between;
-
-
-
     /* background-color: red; */
-      /* justify-content: center; */
 
   }
 
@@ -23,7 +32,5 @@
       padding: 3%;
       margin: 3%;
       flex-grow: 1;
-
-
 
   }
